@@ -89,8 +89,7 @@ public abstract class EntityProcessor {
   public abstract Map<String, Object> nextModifiedParentRowKey();
 
   /**
-   * Invoked for each parent-row after the last row for this entity is processed. If this is the root-most
-   * entity, it will be called only once in the import, at the very end.
+   * Invoked for each entity at the very end of the import to do any needed cleanup tasks.
    * 
    */
   public abstract void destroy();
